[gd_scene load_steps=6 format=3 uid="uid://baj4shqkfy6gb"]

[ext_resource type="FontFile" uid="uid://dfro1uw22cv6y" path="res://assets/fonts/Dicier-Round-Heavy.otf" id="1_lbmsu"]
[ext_resource type="Script" path="res://scripts/dice.gd" id="2_x3vce"]
[ext_resource type="PackedScene" uid="uid://d2lwkr72x2h4j" path="res://scenes/popup_box.tscn" id="3_6avd5"]

[sub_resource type="Gradient" id="Gradient_7b167"]
offsets = PackedFloat32Array(0, 0.896104, 1)
colors = PackedColorArray(0.623529, 0, 0, 1, 0.223529, 0, 0, 1, 0.188235, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f0knd"]
gradient = SubResource("Gradient_7b167")
fill = 1
fill_from = Vector2(0.516619, 0.529915)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_f0knd")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.529
anchor_right = 1.0
anchor_bottom = 0.712
offset_top = -46.6801
offset_right = -7.0
offset_bottom = 576.96
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 580

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(1, 1, 1, 0.486275)

[node name="Rule Label" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "RULE DESCRIPTION."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -432.0
offset_right = 432.0
offset_bottom = 836.0
grow_horizontal = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(1, 1, 1, 0.486275)

[node name="Rule Name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "RULE NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_lbmsu")
theme_override_font_sizes/font_size = 300
text = "1  2"
icon_alignment = 1
script = ExtResource("2_x3vce")

[node name="roll_timer" type="Timer" parent="MarginContainer/VBoxContainer/HBoxContainer/Button"]
wait_time = 1.1
one_shot = true

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MultiDiceButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 848.0
offset_top = 1680.0
offset_right = 1032.0
offset_bottom = 1864.0
theme_override_fonts/font = ExtResource("1_lbmsu")
theme_override_font_sizes/font_size = 150
text = "5"

[node name="PopupBox" parent="." instance=ExtResource("3_6avd5")]
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="MarginContainer/VBoxContainer/HBoxContainer/Button" method="_on_pressed"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/HBoxContainer/Button/roll_timer" to="MarginContainer/VBoxContainer/HBoxContainer/Button" method="_on_roll_timer_timeout"]
[connection signal="pressed" from="MultiDiceButton" to="PopupBox" method="_on_multi_dice_button_pressed"]
